2019-01-31  Chris Dumez  <cdumez@apple.com>

        [ MacOS ] Layout Test performance-api/performance-observer-callback-after-gc.html is flaky
        https://bugs.webkit.org/show_bug.cgi?id=191041
        <rdar://problem/45649982>

        Reviewed by Joseph Pecoraro.

        Make the test print the same output no matter if the performance observer is notified once or
        twice. What matters is that it is notified about 3 marks.

        * performance-api/performance-observer-callback-after-gc-expected.txt:
        * performance-api/performance-observer-callback-after-gc.html:

2019-01-31  Justin Fan  <justin_fan@apple.com>

        [WebGPU] WebGPUAdapterDescriptor -> GPURequestAdapterOptions and take powerPreference into account
        https://bugs.webkit.org/show_bug.cgi?id=194068
        <rdar://problem/47680215>

        Reviewed by Dean Jackson.

        Add simple test to create device with all options. Update helper functions for other Web GPU
        tests to request different adapters. (No change in test behavior expected.)

        * webgpu/adapter-options-expected.txt: Added.
        * webgpu/adapter-options.html: Added.
        * webgpu/js/basic-webgpu-functions.js:
        (async.setUpContexts): Update to use no adapter request argument at all. 
        * webgpu/js/webgpu-functions.js:
        (async.getBasicDevice): Update to request the low-power adapter.

2019-01-31  Zalan Bujtas  <zalan@apple.com>

        [LFC] Use the used margin values in outOfFlowReplacedHorizontalGeometry consistently
        https://bugs.webkit.org/show_bug.cgi?id=194074

        Reviewed by Antti Koivisto.

        * fast/block/block-only/absolute-position-with-margin-auto-simple2-expected.html: Added.
        * fast/block/block-only/absolute-position-with-margin-auto-simple2.html: Added.

2019-01-31  Chris Fleizach  <cfleizach@apple.com>

        ASSERTION FAILED: cache under WebCore::AXObjectCache::postTextStateChangePlatformNotification