@@ -1,3 +1,14 @@
+2019-01-31  Joseph Pecoraro  <pecoraro@apple.com>
+
+        Web Inspector: Timeline time range selection sometimes shows 0.000, should be just 0
+        https://bugs.webkit.org/show_bug.cgi?id=194108
+        <rdar://problem/47714273>
+
+        Reviewed by Devin Rousso.
+
+        * inspector/unit-tests/number-utilities-expected.txt:
+        * inspector/unit-tests/number-utilities.html:
+
 2019-01-31  Chris Dumez  <cdumez@apple.com>
 
         [ MacOS ] Layout Test performance-api/performance-observer-callback-after-gc.html is flaky
